fix(app): layout breaking on mobile

--- a/packages/web/src/app/shell/page-with-sidenav/page-with-sidenav.component.scss
+++ b/packages/web/src/app/shell/page-with-sidenav/page-with-sidenav.component.scss
@@ -26,7 +26,7 @@
   gap: min(64px, 4%);
 
   @include breakpoints.breakpoint-up(Tablet) {
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
     padding-right: 0;
     margin: 0 64px 32px;
   }
